--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -37,7 +37,7 @@ img.hero:hover{
    display: flex;
   position: stick; 
   flex: 1;
-  padding: 1.5rem 0;
+  padding: 5px 0px 1rem 0px;
   border-bottom: 1px solid #eaeaea;
   /* justify-content: center; */
   /* align-items: center; */
@@ -46,6 +46,7 @@ img.hero:hover{
   white-space: pre-wrap;
 }
 .topnav > a{
+  margin-left: 15px;
   padding: 10px 12px;
   /* border-width: 1px; */
   /* border: 1px solid #eaeaea; */
@@ -67,15 +68,65 @@ img.hero:hover{
 }
 
 a.active {
+  font-weight: bolder;
+  color: white;
   border-radius: 5px;
-  border: 1px solid #eaeaea;
-  /* background-color: #0070f3; */
+  /* border: 1px solid #eaeaea; */
+  background-color: #0070f3;
   /* border-radius: 10px; */
+box-shadow:rgba(0, 118, 255, 0.40) 0px 2px 6px 0px;
   padding: 10px 12px;
   
 
 }
+.side_nav{
+  position: absolute;
+  left:0%;
+  border-right: 1px solid #eaeaea;
+  height: 500px;
+  width:  15%;
+  /* background: #F3F3F3; */
+  border-radius: 10px;
+}
+.topside_nav{
+  display: none;
 
+}
+span.section{
+  display: flex;
+  flex-direction: column;
+  font-size: 17px;
+}
+span.section > a{
+   /* padding-left: 35px; */
+  /* background-color: rgba(0, 112, 243, 0.1);  */
+  border-radius: 0px 10px 10px 0px;
+padding: 5px;
+  margin: 5px 10px 5px 0px;
+}
+a.sec_inactive {
+ /* background-color: #0070f3;  */
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 5px 0px;
+
+
+}
+a.sec_active {
+transition-timing-function: linear;
+
+  margin: 5px 10px 5px 0px;
+   font-weight: bold;
+  color: white;
+  background-color: #0070f3;
+  border-radius: 0px 10px 10px 0px;
+box-shadow:rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
+}
+span.section > a:hover:not(.sec_active){
+  transition: color 0.15s ease, border-color 0.20s ease;
+  
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 5px 0px;
+  background-color:rgba(0, 112, 243, 0.2); 
+  border-radius: 0px 10px 10px 0px;
+}
 .footer {
   display: flex;
   flex: 1;
@@ -84,6 +135,7 @@ a.active {
   justify-content: center;
   align-items: center;
 }
+
 
 .footer a {
   display: flex;
@@ -176,8 +228,15 @@ a.active {
  position: absolute;
  right:0%;
  margin-right: 30px;
- width: 170px;
+ width: 150px;
  color: red;
+ background-color: #0070f3;
+ border-radius: 20px;
+ padding: 8px;
+box-shadow:rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
+}
+.logo_me:hover{
+box-shadow:rgba(0, 118, 255, 0.9) 0px 2px 6px 0px;
 }
 @media (max-width: 600px) {
   .grid {
@@ -190,6 +249,46 @@ a.active {
     display: none;
     transition: 2ms;
   }
+  .side_nav {
+    display: none;
+  }
+  .topside_nav {
+   display: flex;
+  position: stick; 
+  flex: 1;
+  padding: 5px 0px 1rem 0px;
+  /* border-bottom: 1px solid #eaeaea; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  }
+  span.topSection{
+      
+  }
+  span.topSection > a{
+    margin-left: 25px;
+    padding: 0px 7px 20px 7px;
+    font-weight: bold;
+
+  }
+    
+  span.topSection > a:active{
+
+  }
+  a.sectop_active{
+    color: white;
+    background-color: #0070f3;
+
+box-shadow:rgba(0, 118, 255, 0.40) 0px 2px 6px 0px;
+  border-radius: 0px 0px 10px 10px;
+  }
+
+a.sec_inactive {
+ /* background-color: #0070f3;  */
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 5px 0px;
+  border-radius: 0px 0px 10px 10px;
+
+
+}
   img.hero{
     width: 150px;
     margin-bottom: 20px;
