--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -32,15 +32,19 @@ hr.hrlong {
   background-color: #0070f3;
   border-style: none;
 }
-img.hero{
-  width:200px;
+.hero{
+  
   border-radius: 60px;
-  border: 8px solid #0070f3 ;
+}
+span.hero{
+
+  width:200px;
+  /* border: 8px solid #0070f3 ; */
   margin-bottom: 10px;
-box-shadow:rgba(0, 118, 255, 0.90) 0px 2px 6px 0px;
+/* box-shadow:rgba(0, 118, 255, 0.90) 0px 2px 6px 0px; */
   
 }
-img.hero:hover{
+span.hero:hover{
 }
 .topnav{
    display: flex;
